--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,8 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "tasks/task_3/main.go"
+            "program": "tasks/task_5/main.go",
+            "args": ["-F", "a", "files/test_file4.txt"]
         }
     ]
 }
