--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,8 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "tasks/task_6/main.go",
-            "args": ["-d ", ",","-f", "1,9,3", "-s", "files/test_file1.txt"]
+            "program": "patterns/state/main.go",
+           // "args": ["-d ", ",","-f", "1,9,3", "-s", "files/test_file1.txt"]
         }
     ]
 }
