--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "patterns/state/main.go",
+            "program": "patterns/chain_of_responsibility/main.go",
            // "args": ["-d ", ",","-f", "1,9,3", "-s", "files/test_file1.txt"]
         }
     ]
